--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ scope = "1.10.2"
 jsoup = "1.20.1"
 lucene = "4.10.4"
 gson = "2.13.1"
+sqlite = "3.50.3.0"
 
 
 [libraries]
@@ -26,6 +27,7 @@ apache-lucene = { group = "org.apache.lucene", name = "lucene-core", version.ref
 apache-lucene-analizer = { group = "org.apache.lucene", name = "lucene-analyzers-common", version.ref = "lucene"}
 apache-lucene-query = { group = "org.apache.lucene", name = "lucene-queryparser", version.ref = "lucene"}
 google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+xerial-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite"}
 
 
 [plugins]
