Fixed: Invalid [Guide] error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
             --vendor "Pacifique Mossi" `
             --win-menu `
             --win-shortcut `
+            --win-console`
             --dest dist
 
       # -------- MACOS --------
@@ -59,6 +60,7 @@ jobs:
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
             --vendor "Pacifique Mossi" \
+            --mac-console \
             --dest dist
 
       # -------- LINUX --------
@@ -73,6 +75,7 @@ jobs:
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
             --vendor "Pacifique Mossi" \
+            --linux-console \
             --dest dist
 
       - name: Upload installers to Release
