--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,24 +17,30 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Download JBR 21.0.8
+      - name: Download JBR 21.0.8 For Mac
+        if: runner.os == 'macOs'
         run: |
-          if [ "${{ runner.os }}" == "macOS" ]; then
-            curl -L -o jbr.tar.gz https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-osx-x64-b895.146.tar.gz
-            mkdir -p /tmp/jbr/mac
-            tar -xf jbr.tar.gz -C /tmp/jbr/mac
-            echo "JAVA_HOME=/tmp/jbr/mac/jbrsdk-21.0.8/Contents/Home" >> $GITHUB_ENV
-          elif [ "${{ runner.os }}" == "Linux" ]; then
-            curl -L -o jbr.tar.gz https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-linux-x64-b895.146.tar.gz
-            mkdir -p /tmp/jbr/lin
-            tar -xf jbr.tar.gz -C /tmp/jbr/lin
-            echo "JAVA_HOME=/tmp/jbr/lin/jbrsdk-21.0.8" >> $GITHUB_ENV
-          else
-            curl -L -o jbr.zip https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-windows-x64-b895.146.zip
-            mkdir C:\jbr\win
-            tar -xf jbr.zip -C C:\jbr\win
-            echo "JAVA_HOME=C:\jbr\win\jbrsdk-21.0.8" >> $GITHUB_ENV
-          fi
+          curl -L -o jbr.tar.gz https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-osx-x64-b895.146.tar.gz
+          mkdir -p /tmp/jbr/mac
+          tar -xf jbr.tar.gz -C /tmp/jbr/mac
+          echo "JAVA_HOME=/tmp/jbr/mac/jbrsdk-21.0.8/Contents/Home" >> $GITHUB_ENV
+
+      - name: Download JBR 21.0.8 For Linux
+        if: runner.os == 'Linux'
+        run: |
+          curl -L -o jbr.tar.gz https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-linux-x64-b895.146.tar.gz
+          mkdir -p /tmp/jbr/lin
+          tar -xf jbr.tar.gz -C /tmp/jbr/lin
+          echo "JAVA_HOME=/tmp/jbr/lin/jbrsdk-21.0.8" >> $GITHUB_ENV
+
+      - name: Download JBR 21.0.8 For Windows
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Invoke-WebRequest -Uri "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-windows-x64-b895.146.zip" -OutFile "C:\jbr\win\jbr.zip"
+          New-Item -ItemType Directory -Force -Path "C:\jbr\win"
+          Expand-Archive -Path "C:\jbr\win\jbr.zip" -DestinationPath "C:\jbr\win"
+          echo "JAVA_HOME=C:\jbr\win\jbrsdk-21.0.8" >> $Env:GITHUB_ENV
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
