Fixed: Invalid [Guide] error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,8 @@ jobs:
           New-Item -ItemType Directory -Force -Path "C:\jbr\win"
           Invoke-WebRequest -Uri "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-windows-x64-b895.146.zip" -OutFile "C:\jbr\win\jbr.zip"
           Expand-Archive -Path "C:\jbr\win\jbr.zip" -DestinationPath "C:\jbr\win"
-          echo "JAVA_HOME=C:\jbr\win\jbrsdk-21.0.8-windows-x64-b895.146" >> $Env:GITHUB_ENV
+          "JAVA_HOME=C:\jbr\win\jbrsdk-21.0.8-windows-x64-b895.146" |
+             Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
 
 #      - name: Set up JDK 21
 #        uses: actions/setup-java@v4
