--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,14 +40,22 @@ jobs:
           New-Item -ItemType Directory -Force -Path "C:\jbr\win"
           Invoke-WebRequest -Uri "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-21.0.8-windows-x64-b895.146.zip" -OutFile "C:\jbr\win\jbr.zip"
           Expand-Archive -Path "C:\jbr\win\jbr.zip" -DestinationPath "C:\jbr\win"
-          "JAVA_HOME=C:\jbr\win\jbrsdk-21.0.8-windows-x64-b895.146" |
-             Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          $jbr = Get-ChildItem C:\jbr\win | Where-Object { $_.PSIsContainer } | Select-Object -First 1
+
+          "JAVA_HOME=$($jbr.FullName)" | Add-Content $env:GITHUB_ENV
 
 #      - name: Set up JDK 21
 #        uses: actions/setup-java@v4
 #        with:
 #          distribution: "temurin"
 #          java-version: "21"
+
+      - name: Verify JAVA_HOME on Windows
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          echo "JAVA_HOME=$env:JAVA_HOME"
+          & "$env:JAVA_HOME\bin\java.exe" -version
 
       - name: Verify Java
         run: |
