--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,24 +50,12 @@ jobs:
 #          distribution: "temurin"
 #          java-version: "21"
 
-      - name: Verify JAVA_HOME on Windows
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          echo "JAVA_HOME=$env:JAVA_HOME"
-          & "$env:JAVA_HOME\bin\java.exe" -version
-
-      - name: Verify Java
-        run: |
-          java -version
-          echo "JAVA_HOME=$JAVA_HOME"
-
       - name: Grant execute permission for Gradle
         if: runner.os != 'Windows'
         run: chmod +x gradlew
 
       - name: Build Compose uber JAR
-        run: ./gradlew clean packageUberJarForCurrentOS
+        run: ./gradlew clean packageUberJarForCurrentOS -Dorg.gradle.java.home="$JAVA_HOME"
 
       - name: Resolve JAR name
         shell: bash
@@ -91,6 +79,7 @@ jobs:
             --vendor "Pacifique Mossi" `
             --win-menu `
             --win-shortcut `
+            --java-home "$Env:JAVA_HOME" `
             --win-console `
             --add-modules ALL-MODULE-PATH `
             --dest dist
