--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,7 @@ jobs:
 
           Write-Host "Using JAVA_HOME=$Env:JAVA_HOME"
           & "$Env:JAVA_HOME\bin\java.exe" -version
+          
           jpackage `
             --type exe `
             --input build/compose/jars `
@@ -95,7 +96,7 @@ jobs:
             --win-shortcut `
             --win-console `
             --add-modules ALL-MODULE-PATH `
-            --java-home "$Env:JAVA_HOME" `
+            --runtime-image "$Env:JAVA_HOME" `
             --dest dist
 
       # -------- MACOS --------
