Fixed: Invalid [Guide] err

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Build macOS installer
         if: runner.os == 'macOS'
         run: |
-          & "$JAVA_HOME/bin/jpackage" \
+          "$JAVA_HOME/bin/jpackage" \
             --type dmg \
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
@@ -116,7 +116,7 @@ jobs:
       - name: Build Linux installer
         if: runner.os == 'Linux'
         run: |
-          & "$JAVA_HOME/bin/jpackage" \
+          "$JAVA_HOME/bin/jpackage" \
             --type deb \
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
