--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,12 +3,11 @@ serilization = "1.8.1"
 sp = "2.1.20"
 nicehttp = "0.4.13"
 okhttp3 = "4.12.0"
-foundation = "0.15.2"
+foundation = "0.33.0-253.29795"
 net = "5.17.0"
 seleniumhq = "4.34.0"
 scope = "1.10.2"
 jsoup = "1.20.1"
-lucene = "4.7.2"
 gson = "2.13.1"
 sqlite = "3.50.3.0"
 
@@ -23,9 +22,6 @@ net-jna = { group = "net.java.dev.jna", name = "jna", version.ref = "net"}
 java-seleniumhq = { group = "org.seleniumhq.selenium", name = "selenium-java", version.ref = "seleniumhq"}
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "scope"}
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup"}
-apache-lucene = { group = "org.apache.lucene", name = "lucene-core", version.ref = "lucene"}
-apache-lucene-analizer = { group = "org.apache.lucene", name = "lucene-analyzers-common", version.ref = "lucene"}
-apache-lucene-query = { group = "org.apache.lucene", name = "lucene-queryparser", version.ref = "lucene"}
 google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
 xerial-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite"}
 
