--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,7 @@ jobs:
             --type exe `
             --input build/compose/jars `
             --main-jar "$Env:JAR_NAME" `
+            --icon resources/icons/icon.ico `
             --main-class MainKt `
             --name "The Guide" `
             --app-version $version `
@@ -105,6 +106,7 @@ jobs:
             --type dmg \
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
+            --icon resources/icons/icon.icns \
             --main-class MainKt \
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
@@ -121,6 +123,7 @@ jobs:
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
             --main-class MainKt \
+            --icon resources/icons/logo.png \
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
             --vendor "Pacifique Mossi" \
