couple of things changed still not even version 1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,7 +87,7 @@ jobs:
             --type exe `
             --input build/compose/jars `
             --main-jar "$Env:JAR_NAME" `
-            --icon resources/icons/icon.ico `
+            --icon ${{ github.workspace }}/resources/icons/icon.ico `
             --main-class MainKt `
             --name "The Guide" `
             --app-version $version `
@@ -106,7 +106,7 @@ jobs:
             --type dmg \
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
-            --icon resources/icons/icon.icns \
+            --icon ${{ github.workspace }}/resources/icons/icon.icns \
             --main-class MainKt \
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
@@ -123,7 +123,7 @@ jobs:
             --input build/compose/jars \
             --main-jar "$JAR_NAME" \
             --main-class MainKt \
-            --icon resources/icons/logo.png \
+            --icon ${{ github.workspace }}/resources/icons/logo.png \
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
             --vendor "Pacifique Mossi" \
