--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,8 +94,7 @@ jobs:
             --vendor "Pacifique Mossi" `
             --win-menu `
             --win-shortcut `
-            --win-console `
-            --runtime-image "$Env:JAVA_HOME" `
+            --runtime-image "${Env:JAVA_HOME}" `
             --dest dist
 
       # -------- MACOS --------
@@ -111,7 +110,7 @@ jobs:
             --name "The Guide" \
             --app-version ${GITHUB_REF_NAME#v} \
             --vendor "Pacifique Mossi" \
-            --runtime-image "${JAVA_HOME}" \
+            --runtime-image "$JAVA_HOME" \
             --dest dist
 
       # -------- LINUX --------
